# vplugin-example

./: .gitignore  Cargo.toml  README.md
plugin/: Makefile  metadata.toml
plugin/src/: plugin.c
src/: main.rs
