[package]
name     = "vplugin-example"
version  = "0.1.0"
edition  = "2021"
keywords = [
        "example",
        "plugin",
        "opengl",
        "graphics",
        "vplugin"
]
category = "example"

[dependencies]
glfw    = "0.49.1"
vplugin = { path = "../VPlugin" }
env_logger = "0.10.0"

[profile.release]
lto   = true
panic = "abort"
