[package]
name     = "vplugin-example"
version  = "0.1.0"
edition  = "2021"
keywords = [
        "example",
        "plugin",
        "opengl",
        "graphics",
        "vplugin"
]

[dependencies]
glfw    = "0.49.1"
vplugin = { git = "https://github.com/VPlugin/VPlugin.git" }
env_logger = "0.10.0"

[profile.release]
lto   = true